# airspeed

./: .gitignore  .travis.yml  LICENCE  Makefile  README.md  airspeed.py  airspeed_test.py  flake.nix  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  main.yml
airspeed/: __init__.py  api.py  operators.py
tests/: __init__.py  airspeed_test.py  conftest.py  test_templating.py  test_templating.snapshot.json
