[metadata]
name = airspeed
version = 0.6.0
author = Steve Purcell and Chris Tarttelin
author_email = steve@pythonconsulting.com, chris@pythonconsulting.com
url = https://github.com/purcell/airspeed
license = BSD
description = Airspeed is a powerful and easy-to-use templating engine for Python that aims for a high level of compatibility with the popular Velocity library for Java.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
install_requires =
    six
    cachetools

packages = find:

[options.packages.find]
where = .
include = airspeed
exclude =
    examples
    tests
    tests.*
    docs

[options.entry_points]

[options.package_data]

[options.extras_require]

[flake8]
